[skin] Avoid line break in dates in Payment Lines

--- a/web/org.openbravo.retail.posterminal/css/new-obpos-main.css
+++ b/web/org.openbravo.retail.posterminal/css/new-obpos-main.css
@@ -2714,12 +2714,12 @@ li.selected > .obUiRenderOrderLine_edit {
 
 .obUiRenderPaymentLine-name {
   float: left;
-  width: 40%;
+  width: 32%;
 }
 
 .obUiRenderPaymentLine-date {
   float: left;
-  width: 20%;
+  width: 28%;
   text-align: right;
 }
 
